# myCCMAnalysis

./: .gitignore  Brewfile  CMakeLists.txt  LinkDef.h  MakeSPECalibrationHists.cxx  MakeSPECalibrationHists.h  MsgLog.cxx  NearlineSPEDiag.cxx  NearlineSPEDiag.h  PMTInfoMap.cxx  PMTInfoMap.h  PMTInformation.h  Pulses.cxx  Pulses.h  README.md  RawData.cxx  RawData.h  SPECalibrationVariables.cxx  SPECalibrationVariables.h  SimplifiedEvent.cxx  SimplifiedEvent.h  Utility.cxx  Utility.h  applyPreCuts.cc  doxygen_config_file  energyCalibration.cc  findEvents.cc  mapping_master_8inch_for_db.csv  nearlineDiag.cc  requirements.txt
projects/g4-larsim/: CMakeLists.txt  FindCLEP.cmake  FindG4VisDrivers.cmake  FindGeant4.cmake
projects/g4-larsim/apps/: CCM.cc  CCM.cxx  CCM.mac  cerenkov.mac  larsim.cxx  larsim.mac  sodium.mac  vis.mac
projects/g4-larsim/depricated/: G4CCMActionInitialization.cxx  G4CCMActionInitialization.h  G4CCMDetectorConstruction.h  G4CCMEventAction.h  G4CCMMainVolume.cxx  G4CCMPMTHit.cxx  G4CCMPMTHit.h  G4CCMPMTSD.cxx  G4CCMPMTSD.h  G4CCMPhysicsList.cxx  G4CCMPrimaryGeneratorAction.h  G4CCMRun.h  G4CCMRunAction.cxx  G4CCMRunAction.h  G4CCMRunManager.cxx  G4CCMScintHit.cxx  G4CCMScintHit.h  G4CCMScintSD.cxx  G4CCMScintSD.h  G4CCMStackingAction.cxx  G4CCMSteppingAction.cxx  G4CCMSteppingMessenger.h  G4CCMTrajectory.h  G4CCMUserSteppingAction.h  G4CCMUserTrackInformation.cxx  G4CCMUserTrackInformation.h  G4CCMUserTrackingAction.cxx  G4CCMUserTrackingAction.h  J4PMTSolidMaker.cxx  cerenkov.mac  photon.mac  vis.mac
projects/g4-larsim/private/g4-larsim/: CCM200Response.cxx  CCMParticleInjector.cxx  CCMSimpleInjector.cxx  CCMSimulator.cxx  LaserInjector.cxx  SodiumSourceInjector.cxx  StackTrace.cxx
projects/g4-larsim/private/g4-larsim/g4classes/: CCMParticleInjector.h  CCMSimpleInjector.cxx  CCMSimpleInjector.h  CCMTopSimulator.h  G4CCMActionInitialization.cxx  G4CCMActionInitialization.h  G4CCMCerenkov.cxx  G4CCMCerenkov.h  G4CCMDecayPhysics.cxx  G4CCMDecayPhysics.h  G4CCMDetectorConstruction.cxx  G4CCMDetectorConstruction.h  G4CCMDetectorConstruction.hh  G4CCMDetectorMessenger.cxx  G4CCMDetectorMessenger.h  G4CCMDetectorMessenger.hh  G4CCMEDepSD.cxx  G4CCMEDepSD.h  G4CCMEventAction.cxx  G4CCMMainVolume.h  (+54 more)
projects/g4-larsim/public/g4-larsim/: CCM200Response.h  CCMDetectorResponse.h  CCMParticleInjector.h  CCMSimpleInjector.h  CCMSimulator.h  CCMSimulator.hh  LaserInjector.h  SodiumSourceInjector.h  StackTrace.h
projects/g4-larsim/resources/examples/: testing_simple_injection.py
projects/g4-larsim/visualization/: G4CCMActionInitialization.cxx  G4CCMEventAction.cxx  G4CCMEventAction.h  G4CCMEventMessenger.cxx  G4CCMEventMessenger.h  G4CCMPrimaryGeneratorAction.cxx  G4CCMPrimaryGeneratorAction.h  G4CCMRun.cxx  G4CCMRun.h  G4CCMRunAction.cxx  G4CCMRunAction.h  G4CCMStackingAction.cxx  G4CCMStackingAction.h  G4CCMSteppingAction.cxx  G4CCMSteppingAction.h  G4CCMSteppingMessenger.cxx  G4CCMTrackingAction.cxx  G4CCMTrackingAction.h  G4CCMTrajectory.cxx  G4CCMTrajectory.h  G4CCMUserTrackInformation.cxx  G4CCMUserTrackInformation.h  G4CCMVisActionInitialization.cxx  G4CCMVisActionInitialization.h  G4CCMVisPrimaryGeneratorAction.cxx  G4CCMVisPrimaryGeneratorAction.h  PhysicsList.cxx
simulationCCM/: #laserTemplate.mac#  CMakeLists.txt  README.md  allCalibs.mac  argonTemplate.mac  calibTemplate.mac  cosmicTemplate.mac  dmTemplate.mac  fullsim_CCM.cc  init_vis.mac  laserTemplate.mac  vis.mac
simulationCCM/analysisscripts/: calibfunctions.py
simulationCCM/include/: #detectorConstruction.hh#  actionInitialization.hh  detectorConstruction.hh  detectorMessenger.hh  eventAction.hh  primaryGenerator.hh  runAction.hh
simulationCCM/src/: LBOCdetector.file  actionInitialization.cc  detectorConstruction.cc  detectorMessenger.cc  eventAction.cc  idealDetector.file  paintedFoilsDetector.file  primaryGenerator.cc  runAction.cc  steppingAction.cc
src/ds/: AccumWaveform.cxx  AccumWaveform.h  CMakeLists.txt  Events.cxx  Events.h  LinkDef.h  MCTruth.cxx  MCTruth.h  Pulses.cxx  Pulses.h  RawData.cxx  RawData.h  SimplifiedEvent.cxx  SimplifiedEvent.h  SinglePulse.cxx  SinglePulse.h  data_structures.hh  data_structures_noTemp.hh
src/io/: CCMEventTreeHandle.cxx  CCMEventTreeHandle.h  CCMRawIO.cxx  CCMRawIO.h  CCMRootIO.cxx  CCMRootIO.h  CMakeLists.txt  LinkDef.h
src/modules/: CCMAnalysis.cxx  CCMFitDM.cxx  CMakeLists.txt
src/modules/detsim/: CCMPMTResponse.cxx  CCMPMTResponse.h  CCMQuenchingFactor.cxx  CCMQuenchingFactor.h  CCMStrobeOverlay.cxx  CCMStrobeOverlay.h  CCMTimeShift.cxx  CCMTimeShift.h  CMakeLists.txt  LinkDef.h
src/modules/framework/: CCMConfig.cxx  CCMConfig.h  CCMConfigParam.cxx  CCMConfigParam.h  CCMConfigTable.cxx  CCMConfigTable.h  CCMModule.cxx  CCMModule.h  CCMModuleTable.cxx  CCMModuleTable.h  CCMTaskConfig.cxx  CCMTaskConfig.h  CCMTaskManager.cxx  CCMTaskManager.h  CMakeLists.txt  DOMCount.hpp  LinkDef.h
src/modules/nearline/: CCMFindPulses.cxx  CCMFindPulses.h  CCMRateCalc.cxx  CCMRateCalc.h  CCMSPECalc.cxx  CCMSPECalc.h  CMakeLists.txt  LinkDef.h
src/modules/plots/: CCMNuDMPlots.cxx  CCMNuDMPlots.h  CCMProcessingPlots.cxx  CCMProcessingPlots.h  CCMSumWaveforms.cxx  CCMSumWaveforms.h  CMakeLists.txt  LinkDef.h
src/modules/reco/: CCMApplyPreCuts.cxx  CCMApplyPreCuts.h  CCMBuildAccumWaveform.cxx  CCMBuildAccumWaveform.h  CCMConvertBinary2ROOT.cxx  CCMConvertBinary2ROOT.h  CCMFindEvents.cxx  CCMFindEvents.h  CCMNa22Cuts.cxx  CCMNa22Cuts.h  CCMNearlineDiag.cxx  CCMNearlineDiag.h  CCMSingletTriplet.cxx  CCMSingletTriplet.h  CMakeLists.txt  LinkDef.h  singletTripletPlots.cc
src/modules/templates/: CCMTemplate.cxx  CCMTemplate.h  CCMTemplateAna.cxx  CCMTemplateAna.h  CMakeLists.txt  LinkDef.h
src/spe/: CMakeLists.txt  LinkDef.h  MakeSPECalibrationHists.cxx  MakeSPECalibrationHists.h  NearlineSPEDiag.cxx  NearlineSPEDiag.h  SPECalibrationVariables.cxx
src/utils/: CCMBeamInfo.cxx  CCMBeamInfo.h  CMakeLists.txt  CSVrow.h  LinkDef.h  MsgLog.cxx  MsgLog.h  PMTInfoMap.cxx  PMTInfoMap.h  PMTInfoMap.tcc  PMTInformation.cxx  PMTInformation.h  Utility.cxx  Utility.h
(+990 files in other folders)
