set(IO_HEADERS
  CCMRootIO.h
  CCMRawIO.h
  CCMEventTreeHandle.h
  )

set(INCLUDE_DIRECTORIES ${ROOT_INCLUDE_DIR} ${CCMAnalysis_INCLUDE_DIRS})

include_directories(${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES ${ROOT_LIBRARY_DIR} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

link_directories(${LINK_DIRECTORIES})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES}")

set(IO_SRCS
  CCMRootIO.cxx
  CCMRawIO.cxx
  CCMEventTreeHandle.cxx
  )

set(IO_LINKDEF LinkDef.h)
set(IO_DICTIONARY CCMIODict)
ROOT_GENERATE_DICTIONARY("${IO_DICTIONARY}" "${IO_HEADERS}" LINKDEF "${IO_LINKDEF}")

set(IO_SRCS ${IO_SRCS} ${IO_DICTIONARY}.cxx)

add_library(CCMIO SHARED ${IO_SRCS})
#CREATE_LIBTOOL_FILE(CCMIO ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries(CCMIO ${ROOT_LIBRARIES} CCMUtils CCMDS)

#install(FILES ${IO_HEADERS} DESTINATION $ENV{CCMINSTALL}/include)
