set(SPE_HEADERS
  SPECalibrationVariables.h
  MakeSPECalibrationHists.h
  NearlineSPEDiag.h
  )

set(INCLUDE_DIRECTORIES ${ROOT_INCLUDE_DIR} ${CCMAnalysis_INCLUDE_DIRS})

include_directories(${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES ${ROOT_LIBRARY_DIR} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

link_directories(${LINK_DIRECTORIES})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES}")

set(SPE_SRCS
  SPECalibrationVariables.cxx
  MakeSPECalibrationHists.cxx
  NearlineSPEDiag.cxx
  )

set(SPE_LINKDEF LinkDef.h)
set(SPE_DICTIONARY CCMSPEDict)
ROOT_GENERATE_DICTIONARY("${SPE_DICTIONARY}" "${SPE_HEADERS}" LINKDEF "${SPE_LINKDEF}")

set(SPE_SRCS ${SPE_SRCS} ${SPE_DICTIONARY}.cxx)

add_library(CCMSPE SHARED ${SPE_SRCS})
#CREATE_LIBTOOL_FILE(CCMSPE ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries(CCMSPE ${ROOT_LIBRARIES} CCMUtils CCMDS)

#install(FILES ${SPE_HEADERS} DESTINATION $ENV{CCMINSTALL}/include)
