set(UTILS_HEADERS
  MsgLog.h
  PMTInformation.h
  PMTInfoMap.h
  Utility.h
  )

set(INCLUDE_DIRECTORIES ${ROOT_INCLUDE_DIR} ${CCMAnalysis_INCLUDE_DIRS})

include_directories(${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES ${ROOT_LIBRARY_DIR} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

link_directories(${LINK_DIRECTORIES})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES}")

set(UTILS_SRCS
  MsgLog.cxx
  PMTInformation.cxx
  PMTInfoMap.cxx
  Utility.cxx
  )

set(UTILS_LINKDEF LinkDef.h)
set(UTILS_DICTIONARY CCMUtilsDict)
ROOT_GENERATE_DICTIONARY("${UTILS_DICTIONARY}" "${UTILS_HEADERS}" LINKDEF "${UTILS_LINKDEF}")
#ROOT_GENERATE_DICTIONARY(${UTILS_DICTIONARY} PMTInfoMap.h PMTInformation.h MsgLog.h Utility.h LINKDEF ${UTILS_LINKDEF})

set(UTILS_SRCS ${UTILS_SRCS} ${UTILS_DICTIONARY}.cxx)

add_library(CCMUtils SHARED ${UTILS_SRCS})
#CREATE_LIBTOOL_FILE(CCMUtils ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries(CCMUtils ${ROOT_LIBRARIES})

#install(FILES ${UTILS_HEADERS} DESTINATION $ENV{CCMINSTALL}/include)
