set(MODULENAME CCMUtils)

set(LOCAL_HEADERS
  MsgLog.h
  PMTInformation.h
  PMTInfoMap.h
  PMTInfoMap.tcc
  CCMBeamInfo.h
  Utility.h
  )

set(LOCAL_SRCS
  MsgLog.cxx
  PMTInformation.cxx
  PMTInfoMap.cxx
  CCMBeamInfo.cxx
  Utility.cxx
  )

set(LOCAL_LINKDEF LinkDef.h)
set(LOCAL_DICTIONARY "${MODULENAME}Dict")
set(LINK_DIRECTORIES ${ROOT_LIBRARY_DIR} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES}")

add_library(${MODULENAME} SHARED ${LOCAL_SRCS} ${LOCAL_HEADERS})
set_target_properties(${MODULENAME} PROPERTIES PUBLIC_HEADER "${LOCAL_HEADERS}")
include_directories(${MODULENAME} PRIVATE ${ROOT_INCLUDE_DIR})
include_directories(${MODULENAME} PRIVATE ${CCMAnalysis_INCLUDE_DIRS})
target_link_libraries(${MODULENAME} ${ROOT_LIBRARIES})
target_link_directories(${MODULENAME} PUBLIC ${ROOT_LIBRARY_DIR} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

set(INCLUDE_DIRECTORIES ${CCMAnalysis_INCLUDE_DIRS})
ROOT_GENERATE_DICTIONARY(${LOCAL_DICTIONARY} "${LOCAL_HEADERS}" LINKDEF "${LOCAL_LINKDEF}" MODULE ${MODULENAME})
target_sources(${MODULENAME} PRIVATE "${LOCAL_DICTIONARY}.cxx")

install(TARGETS ${MODULENAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/utils)
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/lib${MODULENAME}_rdict.pcm"
    DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/lib)
