set(DETSIM_HEADERS 
  CCMPMTResponse.h
  CCMStrobeOverlay.h
  CCMTimeShift.h
  CCMQuenchingFactor.h
  )


set(INCLUDE_DIRECTORIES ${ROOT_INCLUDE_DIR} $ENV{XERCESINCLUDE} ${CCMAnalysis_INCLUDE_DIRS})

include_directories(${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES /usr/lib64/ ${ROOT_LIBRARY_DIR} $ENV{XERCESLIB} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

link_directories(${LINK_DIRECTORIES})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES} $ENV{XERCESLIB}")

set(DETSIM_SRCS
  CCMPMTResponse.cxx
  CCMStrobeOverlay.cxx
  CCMTimeShift.cxx
  CCMQuenchingFactor.cxx
  )

set(DETSIM_LINKDEF LinkDef.h)
set(DETSIM_DICTIONARY CCMDetSimDict)
ROOT_GENERATE_DICTIONARY("${DETSIM_DICTIONARY}" "${DETSIM_HEADERS}" LINKDEF "${DETSIM_LINKDEF}")

set(DETSIM_SRCS ${DETSIM_SRCS} ${DETSIM_DICTIONARY}.cxx)

add_library(CCMDetSim SHARED ${DETSIM_SRCS})
#CREATE_LIBTOOL_FILE(CCMDETSIM ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries(CCMDetSim ${ROOT_LIBRARIES} CCMUtils CCMDS CCMXML)

install(FILES ${DETSIM_HEADERS} DESTINATION $ENV{CCMINSTALLBuild}/include)
