set(NEARLINE_HEADERS 
  CCMFindPulses.h
  CCMSPECalc.h
  CCMRateCalc.h
  )


set(INCLUDE_DIRECTORIES ${ROOT_INCLUDE_DIR} $ENV{XERCESINCLUDE} ${CCMAnalysis_INCLUDE_DIRS})

include_directories(${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES /usr/lib64/ ${ROOT_LIBRARY_DIR} $ENV{XERCESLIB} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

link_directories(${LINK_DIRECTORIES})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES} $ENV{XERCESLIB}")

set(NEARLINE_SRCS
  CCMFindPulses.cxx
  CCMSPECalc.cxx
  CCMRateCalc.cxx
  )

set(NEARLINE_LINKDEF LinkDef.h)
set(NEARLINE_DICTIONARY CCMNearlineDict)
ROOT_GENERATE_DICTIONARY("${NEARLINE_DICTIONARY}" "${NEARLINE_HEADERS}" LINKDEF "${NEARLINE_LINKDEF}")

set(NEARLINE_SRCS ${NEARLINE_SRCS} ${NEARLINE_DICTIONARY}.cxx)

add_library(CCMNearline SHARED ${NEARLINE_SRCS})
#CREATE_LIBTOOL_FILE(CCMNEARLINE ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries(CCMNearline ${ROOT_LIBRARIES} CCMUtils CCMSPE CCMDS CCMXML)

install(FILES ${NEARLINE_HEADERS} DESTINATION $ENV{CCMINSTALLBuild}/include)
