set(PLOTS_HEADERS 
  CCMSumWaveforms.h
  CCMProcessingPlots.h
  )


set(INCLUDE_DIRECTORIES ${ROOT_INCLUDE_DIR} $ENV{XERCESINCLUDE} ${CCMAnalysis_INCLUDE_DIRS})

include_directories(${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES /usr/lib64/ ${ROOT_LIBRARY_DIR} $ENV{XERCESLIB} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

link_directories(${LINK_DIRECTORIES})

set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} ${ROOT_LIBRARIES} $ENV{XERCESLIB}")

set(PLOTS_SRCS
  CCMSumWaveforms.cxx
  CCMProcessingPlots.cxx
  )

set(PLOTS_LINKDEF LinkDef.h)
set(PLOTS_DICTIONARY CCMPlotsDict)
ROOT_GENERATE_DICTIONARY("${PLOTS_DICTIONARY}" "${PLOTS_HEADERS}" LINKDEF "${PLOTS_LINKDEF}")

set(PLOTS_SRCS ${PLOTS_SRCS} ${PLOTS_DICTIONARY}.cxx)

add_library(CCMPlots SHARED ${PLOTS_SRCS})
#CREATE_LIBTOOL_FILE(CCMPLOTS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries(CCMPlots ${ROOT_LIBRARIES} CCMUtils CCMDS CCMXML)

install(FILES ${PLOTS_HEADERS} DESTINATION $ENV{CCMINSTALLBuild}/include)
